--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "cviebrock/eloquent-sluggable": "^11.0",
+        "doctrine/dbal": "^4.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "mcamara/laravel-localization": "^2.0",
