--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "mcamara/laravel-localization": "^2.0",
         "nakipelo/orchid-ckeditor": "^5.1",
         "orchid/platform": "^14.35",
+        "snowfire/beautymail": "^1.1",
         "unisharp/laravel-filemanager": "^2.9"
     },
     "require-dev": {
